--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ rationale behind storing information in separate files is discussed in <a href="
   
 
 <script type="text/javascript">
-      var disqus_shortname = 'kevinhusblog';
+      var disqus_shortname = 'kevinhustechblog';
       
         
         var disqus_script = 'count.js';
