--- a/About/index.html
+++ b/About/index.html
@@ -57,7 +57,7 @@ ga('send', 'pageview');
       </h1>
       
         <h2 id="subtitle-wrap">
-          <a href="/" id="subtitle">A Hugry Fool</a>
+          <a href="/" id="subtitle">A Hungry Fool</a>
         </h2>
       
     </div>
